--- a/apps/web-platform/package.json
+++ b/apps/web-platform/package.json
@@ -10,41 +10,42 @@
     "clean": "rm -rf .next"
   },
   "dependencies": {
-    "next": "14.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@auth0/nextjs-auth0": "^3.5.0",
     "@auth0/auth0-react": "^2.2.4",
     "@auth0/auth0-spa-js": "^2.1.2",
-    "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "@tailwindcss/typography": "^0.5.10",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.2.0",
-    "lucide-react": "^0.303.0",
-    "@radix-ui/react-dialog": "^1.0.5",
+    "@auth0/nextjs-auth0": "^3.5.0",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tailwindcss/typography": "^0.5.10",
+    "autoprefixer": "^10.4.16",
+    "axios": "^1.6.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "dexie": "^3.2.4",
+    "framer-motion": "^10.16.16",
+    "lucide-react": "^0.303.0",
+    "next": "14.0.4",
     "next-themes": "^0.2.1",
+    "postcss": "^8.4.32",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "rehype-highlight": "^7.0.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
-    "react-markdown": "^9.0.1",
-    "axios": "^1.6.2",
-    "dexie": "^3.2.4",
-    "zustand": "^4.4.7",
-    "framer-motion": "^10.16.16"
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss": "^3.4.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
-    "typescript": "^5.3.3",
     "eslint": "^8.56.0",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "typescript": "^5.3.3"
   }
-} 
+}
