--- a/apps/web-platform/package.json
+++ b/apps/web-platform/package.json
@@ -27,7 +27,7 @@
     "dexie": "^3.2.4",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.303.0",
-    "next": "14.0.4",
+    "next": "15.3.4",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
@@ -38,6 +38,7 @@
     "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
@@ -45,7 +46,7 @@
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "eslint": "^8.56.0",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "15.3.4",
     "typescript": "^5.3.3"
   }
 }
