--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
   },
   "devDependencies": {
     "@turbo/gen": "^1.12.4",
-    "turbo": "^1.12.4",
-    "prettier": "^3.1.1",
+    "@typescript-eslint/eslint-plugin": "^8.35.0",
+    "@typescript-eslint/parser": "^8.35.0",
     "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.0.0",
     "husky": "^8.0.3",
-    "lint-staged": "^15.2.0"
+    "lint-staged": "^15.2.0",
+    "prettier": "^3.6.1",
+    "turbo": "^1.12.4"
   },
   "packageManager": "pnpm@8.15.0",
   "engines": {
     "node": ">=18.0.0"
   }
-} 
+}
