--- a/apps/orchestrator/package.json
+++ b/apps/orchestrator/package.json
@@ -22,37 +22,38 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
     "@nestjs/config": "^3.1.1",
-    "@nestjs/typeorm": "^10.0.1",
-    "@nestjs/schedule": "^4.0.0",
-    "@nestjs/terminus": "^10.2.0",
-    "@nestjs/swagger": "^7.1.17",
-    "typeorm": "^0.3.17",
-    "pg": "^8.11.3",
-    "redis": "^4.6.10",
-    "ioredis": "^5.3.2",
-    "openai": "^4.20.1",
-    "express": "^4.18.2",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
-    "class-validator": "^0.14.0",
-    "class-transformer": "^0.5.1",
-    "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1",
-    "passport-auth0": "^1.4.4",
+    "@nestjs/core": "^10.0.0",
     "@nestjs/passport": "^10.0.3",
-    "jwt-decode": "^4.0.0",
-    "axios": "^1.6.2",
-    "uuid": "^9.0.1",
+    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^4.0.0",
+    "@nestjs/swagger": "^7.1.17",
+    "@nestjs/terminus": "^10.2.0",
+    "@nestjs/typeorm": "^10.0.1",
     "@opentelemetry/api": "^1.7.0",
-    "@opentelemetry/sdk-node": "^0.48.0",
     "@opentelemetry/auto-instrumentations-node": "^0.41.1",
     "@opentelemetry/exporter-jaeger": "^2.0.1",
     "@opentelemetry/instrumentation-http": "^0.48.0",
+    "@opentelemetry/instrumentation-pg": "^0.35.0",
     "@opentelemetry/instrumentation-redis": "^0.35.0",
-    "@opentelemetry/instrumentation-pg": "^0.35.0"
+    "@opentelemetry/sdk-node": "^0.48.0",
+    "@supabase/supabase-js": "^2.50.2",
+    "axios": "^1.6.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "express": "^4.18.2",
+    "ioredis": "^5.3.2",
+    "jwt-decode": "^4.0.0",
+    "openai": "^4.20.1",
+    "passport": "^0.7.0",
+    "passport-auth0": "^1.4.4",
+    "passport-jwt": "^4.0.1",
+    "pg": "^8.11.3",
+    "redis": "^4.6.10",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.17",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -61,8 +62,8 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
-    "@types/passport-jwt": "^3.0.13",
     "@types/passport-auth0": "^1.0.9",
+    "@types/passport-jwt": "^3.0.13",
     "@types/pg": "^8.10.9",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.7",
@@ -98,4 +99,4 @@
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   }
-} 
+}
