--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
   "packageManager": "pnpm@8.15.0",
   "engines": {
     "node": ">=18.0.0"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.50.2"
   }
 }
